# webhookist

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py  server.py
src/: __init__.py  cli.py  log.py  models.py  security.py  server.py  settings.py  static.py  templates.py  websockets.py
static/: index.html
