[project]
name = "fpt"
version = "0.1.0"
description = "A simple project to teach myself FastAPI and related packages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "redis[hiredis]>=7.1.0",
    "sqlmodel>=0.0.31",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "websocket>=0.2.1",
]
